--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # TS Credential M+M2017Grid
 
-asset.oauth.restHost=https://0f074596-79e5-4a1d-8900-707be1c73815.predix-uaa.run.aws-usw02-pr.ice.predix.io/oauth/token
-asset.oauth.password=timeseries_client_readonly:secret
-ts.zoneid=2dc1efc3-10d3-4262-8f0d-6a990160aed3
-ts.service.base.url=https://time-series-store-predix.run.aws-usw02-pr.ice.predix.io/v1/datapoints
+asset.oauth.restHost=
+asset.oauth.password=
+ts.zoneid=
+ts.service.base.url=
 
 asset.zoneid=
 asset.service.base.url=
